--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/mini-tera
-/.mini-tera
-/.mini-tera/terraform.tfstate.json
-mini-tera
-mini-tera.bin
+/mini-terra
+/.mini-terra
+/.mini-terra/mini-terra.state.json
+mini-terra
+mini-terra.bin
