--- a/examples/config.json
+++ b/examples/config.json
@@ -4,7 +4,7 @@
   },
   "variables": {
     "image": "nginx:latest",
-    "container_name": "mini-tera-nginx"
+    "container_name": "mini-terra-nginx"
   },
   "resources": [
     {
